Fix modal nav not scrolling on iPhone (iOS 13.4.1)
Somehow caused by having two declarations of -webkit-overflow-scrolling:
touch on side-by-side elements???? Removing declaration on either nav or
article prevents the issue (also landscape mode, for some reason).

Apple wtf

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -347,7 +347,6 @@ article {
   flex-grow: 1;
   min-width: 26em;
   padding: 1em;
-  -webkit-overflow-scrolling: touch;
   overflow-y: auto;
   overscroll-behavior-y: contain;
 }
